changed layout to flex model, fixed footer icon spacing

--- a/src/elements/footer.css
+++ b/src/elements/footer.css
@@ -1,11 +1,17 @@
 #footer{
-    position:fixed;
-    left: 0;
-    bottom: 0;
+
     width: 100%;
     height: 2.75rem;
     background-color: var(--darker);
     display: flex;
     flex-direction: row;
     align-items: center;
+}
+#footer ul{
+    width: 50%;
+    display: flex;
+    flex-direction: row;
+    gap: 1rem;
+    justify-content: flex-end;
+    padding-right: 3rem;
 }
