--- a/src/elements/header.css
+++ b/src/elements/header.css
@@ -1,7 +1,5 @@
 #header{
-    position:fixed;
-    top: 0;
-    left: 0;
+
     width: 100%;
     height: 5.3rem;
     display: flex;
