--- a/src/elements/navBar.css
+++ b/src/elements/navBar.css
@@ -1,14 +1,12 @@
 #nav {
-  position: sticky;
-  top: 5.3rem;
-  left: 0;
+
   height: 2.75rem;
   width: 100%;
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: center;
-
+  background-color: var(--light);
 }
 
 #nav ul {
@@ -28,6 +26,9 @@ button, input[type="submit"], input[type="reset"] {
 }
 
 .nav-btn{
+    display: flex;
+    justify-content: center;
+    align-items: center;
     height: 1.5rem;
     font-size: .75rem;
     font-weight: 100;
